--- a/MundusTraveller/frontend/static/css/index.css
+++ b/MundusTraveller/frontend/static/css/index.css
@@ -22,3 +22,12 @@ body {
 .map-container {
   height: 800px;
 }
+
+.marker {
+  background-image: url('marker.png');
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+}
