centering register and login, adding country to the reviews

--- a/MundusTraveller/frontend/static/css/index.css
+++ b/MundusTraveller/frontend/static/css/index.css
@@ -38,3 +38,9 @@ body {
 .review_bottom_padding {
   padding-bottom: 50px;
 }
+
+.labelclass {
+  display: inline-block;
+  width: 150px;
+  text-align: center;
+}
