--- a/MundusTraveller/frontend/static/css/index.css
+++ b/MundusTraveller/frontend/static/css/index.css
@@ -17,9 +17,9 @@ body {
 #app {
   width: 100%;
   height: 100%;
-  /* display: flex;*/
 }
 
+/* CSS class used to change the background color */
 .primary {
   position: absolute;
   width: 100%;
@@ -27,18 +27,17 @@ body {
   background-color: #95f09a;
 }
 
+/* CSS class used for the primary title on the HomePage */
 .title {
   color: rgb(67, 67, 236);
 }
 
+/* Minor padding for the search bar on the HomePage */
 .search_top_padding {
  padding-top: 15px;
 }
 
-.review_bottom_padding {
-  padding-bottom: 50px;
-}
-
+/* CSS class used for aligning the registration form */
 .labelclass {
   display: inline-block;
   width: 150px;
